--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "json-server": "^0.16.3",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.1",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
